k8s/infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-tender-ingress
  namespace: smart-tender
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: smarttender.example.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8084
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: tender-search-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend
                port:
                  number: 80
